# tap-miniapp-examples

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: deploy-vanta-companion-api.yml
apps/brainrot-tower-defense/: .gitignore  Cargo.toml  LICENSE  README.md  manifest.tap.json  package.json  preview.html  rsbuild.config.mjs  rslib.config.mjs
apps/brainrot-tower-defense/assets/: styles.css
apps/brainrot-tower-defense/assets/sprites/featured-enemies/: README.md
apps/brainrot-tower-defense/crates/game-content/: Cargo.toml
apps/brainrot-tower-defense/crates/game-content/src/: lib.rs
apps/brainrot-tower-defense/crates/game-core/: Cargo.toml
apps/brainrot-tower-defense/crates/game-core/src/: lib.rs
apps/brainrot-tower-defense/crates/game-protocol/: Cargo.toml
apps/brainrot-tower-defense/crates/game-protocol/src/: lib.rs
apps/brainrot-tower-defense/crates/game-renderer/: Cargo.toml
apps/brainrot-tower-defense/crates/game-renderer/src/: lib.rs
apps/brainrot-tower-defense/crates/game-web/: Cargo.toml  README.md
apps/brainrot-tower-defense/crates/game-web/src/: lib.rs
apps/brainrot-tower-defense/crates/tap-bridge/: Cargo.toml
apps/brainrot-tower-defense/crates/tap-bridge/src/: lib.rs
apps/brainrot-tower-defense/docs/: requirements-checklist.md
apps/brainrot-tower-defense/schemas/: checkpoint.json  game-state-tool-input.json  game-state-tool-output.json
apps/brainrot-tower-defense/scripts/: build-enemy-atlas.py  check-size.mjs  fix-wasm-package.mjs  validate-assets.mjs  validate-manifest.mjs
apps/brainrot-tower-defense/src/: lifecycle.mjs  mcp.mjs  preview.mjs  runtime.mjs  surface.mjs  ui.mjs
apps/family-task-board/: README.md  REQUIREMENTS.md  manifest.tap.json  package.json  rsbuild.config.ts  rslib.config.ts  tsconfig.json
apps/family-task-board/src/: app.tsx  domain.test.ts  domain.ts  lifecycle.ts  preview.tsx  storage.ts  styles.css  surface.tsx
apps/personal-health-ledger/: README.md  REQUIREMENTS.md  manifest.tap.json  package.json  rsbuild.config.ts  rslib.config.ts  tsconfig.json
apps/personal-health-ledger/scripts/: assemble-package.mjs  validate-manifest.mjs
apps/personal-health-ledger/src/: administration-draft.test.ts  administration-draft.ts  app.tsx  csv.test.ts  csv.ts  domain.test.ts  domain.ts  entry-dialog.tsx  global.d.ts  lifecycle.ts  preview.tsx  research-sources.test.ts  research-sources.ts  specialist.test.ts  specialist.ts  storage.ts  styles.css  surface.tsx
apps/pyre/: REQUIREMENTS.md  manifest.tap.json  package.json  rsbuild.config.ts  rslib.config.ts  tsconfig.json
apps/pyre/scripts/: validate-manifest.mjs
apps/pyre/src/: app.tsx  domain.test.ts  domain.ts  lifecycle.ts  mcp.test.ts  mcp.ts  onboarding.tsx  platform.test.ts  platform.ts  preview.tsx  (+7 more)
apps/unofficial-suno-player/: .gitignore  README.md  REQUIREMENTS.md  manifest.tap.json  package.json  rsbuild.config.ts  rslib.config.ts  rstest.config.ts  tsconfig.json
apps/vanta-companion/: README.md  REQUIREMENTS.md  manifest.tap.json  package.json  rsbuild.config.ts  rslib.config.ts  rstest.config.ts  tsconfig.json
apps/vanta-companion-api/: .dev.vars.example  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
miniapps/: 01-family-task-board.md  02-brainrot-tower-defense.md  03-vanta-companion.md  04-pyre.md  05-unofficial-suno-player.md  06-personal-health-ledger.md
(+58 files in other folders)
